Added Bus Stop docs
